[build-system]
build-backend = "flit_core.buildapi"
requires = ["wheel", "setuptools", "flit_core >=3.7.1, <4"]

[project]
name = "stockpred"
version = "1.0.0"
description = "A group project at Oslomet, which uses RNNs to predict stock prices"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ipykernel          ~= 6.17.1",
    "matplotlib         ~= 3.6.2",
    "numpy              ~= 1.23.4",
    "pandas             ~= 1.5.1",
    "plotly             ~= 5.11.0",
    "requests           ~= 2.28.1",
    "scikit-learn       ~= 1.1.3",
    "scipy              ~= 1.9.3",
    "seaborn            ~= 0.12.1",
    "TA-Lib             ~= 0.4.25",
    "tqdm               ~= 4.64.1",
    "yfinance           ~= 0.1.85",

    # "torch            ~= 1.13.0",  # Check README.md for installation instructions
]

[project.optional-dependencies]
linting = [
    "autopep8       ~= 2.0.0",
    "flake8         ~= 5.0.4",
    "isort          ~= 5.10.1",
    "mypy           ~= 0.982",
]
testing = [
    "pytest         ~= 7.2.0",
    "pytest-cov     ~= 4.0.0",
]
dev = [
    "stockpred[linting]",
    "stockpred[testing]",
    "pre-commit     ~= 2.20.0",
]

[tool.flit.module]
name = "stockpred"

[tool.pytest.ini_options]
addopts = """
    tests/
    --cov
    --cov-report html
    --cov-report term-missing
    --cov-fail-under 30
"""
